syntax = "proto3";

package Solace.Compiled;

message Complex {
    double real = 1;
    double imag = 2;
}

message ComplexVector {
    repeated Complex entry = 1;
}

enum ObjectType {
    QUBITS = 0;
    QUANTUM_GATE = 1;
}

message QuantumObject {
    ObjectType type = 1;
    uint64 nQubit = 2;
    oneof object {
        Qubits qubits = 3;
        QuantumGate quantumGate = 4;
    }
}

message Qubits {
    ComplexVector vector = 1;
}

message QuantumGate {
    repeated ComplexVector matrix = 1;
}

